--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   color: #000000;
 }
 .navbar{
-  background-color: #000000 !important;
+  background-color: #ffffff !important;
 
 }
 .menu_active{
